--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,7 +12,8 @@ City: <input type = "text" name = "city">
 <input type = "submit" value="Add Place">
 </form>
 <br />
-<a href = "viewAllPlacesServlet">View the complete list</a>
-
+<a href = "viewAllPlacesServlet">View the complete list</a> <br />
+<a href="viewAllListsServlet">View all Traveling lists</a> <br />
+<a href="addPlacesForListServlet">Create a new list</a>
 </body>
 </html>
